--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,10 +4,10 @@
         <div class="content-center">
             <div class="container">
                 <div class="title-brand">
-                    <div class="angular-logo">
+                    <!-- <div class="angular-logo">
                         <img src="assets/img/angular2-logo.png" alt="">
-                    </div>
-                    <h1 class="presentation-title">Paper Kit 2</h1>
+                    </div> -->
+                    <h1 class="presentation-title">Crypto IPL</h1>
                     <div class="fog-low">
                         <img src="assets/img/fog-low.png" alt="">
                     </div>
@@ -16,16 +16,16 @@
                     </div>
                 </div>
 
-                <h2 class="presentation-subtitle text-center">Free Bootstrap 4 UI Kit for Angular 4+</h2>
+                <h2 class="presentation-subtitle text-center">Buy <b><i>favourite team</i></b> and compete to make <b><i>Ether</i></b></h2>
             </div>
         </div>
         <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
-        <h6 class=" category-absolute ml-auto mr-auto">Designed and coded by
+        <h6 class=" category-absolute ml-auto mr-auto">Presented by Crypto IPL Team
         <!-- <h6 class="category category-absolute">Designed and coded by -->
 
-            <a href="https://www.creative-tim.com" target="_blank">
+            <!-- <a href="https://www.creative-tim.com" target="_blank">
                 <img src="assets/img/creative-tim-white-slim2.png" class="creative-tim-logo">
-            </a>
+            </a> -->
         </h6>
     </div>
     <div class="main">
