--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -41,7 +41,7 @@
         </li>
         <li class="nav-item" *ngIf="!isDocumentation()">
           <a href="http://pk2-angular.creative-tim.com/documentation/tutorial" class="nav-link" target="_blank">
-            <i class="nc-icon nc-book-bookmark"></i> Documentation</a>
+            <i class="nc-icon nc-book-bookmark"></i> My Teams</a>
         </li>
         <li class="nav-item" *ngIf="!isDocumentation()">
           <a href="http://pk2-angular.creative-tim.com/documentation/tutorial" class="nav-link" target="_blank">
