Static information page changes

--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -1,6 +1,7 @@
-<app-basicelements></app-basicelements>
-<app-navigation></app-navigation>
-<div class="section">
+<!-- <app-basicelements></app-basicelements> -->
+<!-- <app-navigation></app-navigation> -->
+<app-information></app-information>
+<!-- <div class="section">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -190,4 +191,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
