--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
                     <!-- <div class="angular-logo">
                         <img src="assets/img/angular2-logo.png" alt="">
                     </div> -->
-                    <h1 class="presentation-title">Crypto IPL</h1>
+                    <h1 class="presentation-title">{{staticMock.title}}</h1>
                     <div class="fog-low">
                         <img src="assets/img/fog-low.png" alt="">
                     </div>
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
-        <h6 class=" category-absolute ml-auto mr-auto">Presented by Crypto IPL Team
+        <h6 class=" category-absolute ml-auto mr-auto">{{staticMock.presentors}}
         <!-- <h6 class="category category-absolute">Designed and coded by -->
 
             <!-- <a href="https://www.creative-tim.com" target="_blank">
