--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="500">
   <div class="container">
     <div class="navbar-translate">
-      <a class="navbar-brand" href="https://www.creative-tim.com">Crypto IPL</a>
+      <a class="navbar-brand" [routerLink]="['home']" >{{title}}</a>
       <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02"
         aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
         <span class="navbar-toggler-bar"></span>
@@ -25,13 +25,13 @@
             <p class="d-lg-none">Facebook</p>
           </a>
         </li>
-        <li class="nav-item" *ngIf="!isDocumentation()">
+        <!-- <li class="nav-item" *ngIf="!isDocumentation()">
           <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial"
             target="_blank">
             <i class="fa fa-instagram"></i>
             <p class="d-lg-none">Instagram</p>
           </a>
-        </li>
+        </li> -->
         <li class="nav-item" *ngIf="!isDocumentation()">
           <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="https://www.github.com/CreativeTimOfficial/pk2-angular"
             target="_blank">
@@ -40,13 +40,20 @@
           </a>
         </li>
         <li class="nav-item" *ngIf="!isDocumentation()">
-          <a href="http://pk2-angular.creative-tim.com/documentation/tutorial" class="nav-link" target="_blank">
+          <a [routerLink]="['market-place']" class="nav-link">
             <i class="nc-icon nc-book-bookmark"></i> My Teams</a>
         </li>
         <li class="nav-item" *ngIf="!isDocumentation()">
-          <a href="http://pk2-angular.creative-tim.com/documentation/tutorial" class="nav-link" target="_blank">
+          <a [routerLink]="['market-place']" class="nav-link">
             <i class="nc-icon nc-book-bookmark"></i> Market Place</a>
         </li>
+
+        <li class="nav-item" *ngIf="!isDocumentation()">
+          <a href="javascript:void(0)" class="nav-link">
+            <img src="assets/img/ether_logo.svg" class="ui image" style="width: 35px; height: 35px;">
+          </a>
+        </li>
+
         <!-- <li class="nav-item" *ngIf="isHome()">
                     <a href="https://www.creative-tim.com/product/paper-kit-2-pro?ref=pk2-free-local" target="_blank" class="btn btn-danger btn-round disabled">Upgrade to Pro</a>
                 </li> -->
