--- a/src/app/marketPlace/market-place.component.html
+++ b/src/app/marketPlace/market-place.component.html
@@ -9,7 +9,7 @@
     <div class="row">
       <div class="col-lg-3" *ngFor="let participant of participantArray;let i = index">
         <div class="card" style="width: 18rem;">
-          <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
+          <img class="card-img-top" src="assets/img/player/{{participant.name}}.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text">{{participant.name}}.</p>
             <h5>
