--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="500">
   <div class="container">
     <div class="navbar-translate">
-      <a class="navbar-brand" [routerLink]="['home']" >{{title}}</a>
+      <a class="navbar-brand" [routerLink]="['home']">{{title}}</a>
       <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02"
         aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
         <span class="navbar-toggler-bar"></span>
@@ -40,7 +40,7 @@
           </a>
         </li>
         <li class="nav-item" *ngIf="!isDocumentation()">
-          <a [routerLink]="['market-place']" class="nav-link">
+          <a href="javascript:void(0)" class="nav-link" (click)="getTokensOfOwner()">
             <i class="nc-icon nc-book-bookmark"></i> My Teams</a>
         </li>
         <li class="nav-item" *ngIf="!isDocumentation()">
@@ -49,7 +49,7 @@
         </li>
 
         <li class="nav-item" *ngIf="!isDocumentation()">
-          <a href="javascript:void(0)" class="nav-link">
+          <a href="javascript:void(0)" class="nav-link" placement="bottom" ngbTooltip="{{account}}">
             <img src="assets/img/ether_logo.svg" class="ui image" style="width: 35px; height: 35px;">
           </a>
         </li>
