Play hard changes

--- a/src/app/components/information/information.component.html
+++ b/src/app/components/information/information.component.html
@@ -17,13 +17,13 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <img src="../assets/img/virat_rcb.jpg" style="width: 550px; height: 300px;" alt="Virat Kohli RCB">
+                <img class="half-window-image" src="../assets/img/virat_rcb.jpg" alt="Play bold">
             </div>
         </div>
 
         <div class="row" style="margin-top:20px;margin-bottom: 20px;">
             <div class="col-md-6">
-                <img src="../assets/img/virat_rcb.jpg" style="width: 550px; height: 300px;" alt="Virat Kohli RCB">
+                <img class="half-window-image" src="../assets/img/virat_rcb.jpg" alt="Play bold">
             </div>
             <div class="col-md-6">
                 <div class="tim-title">
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <img src="../assets/img/virat_rcb.jpg" style="width: 550px; height: 300px;" alt="Virat Kohli RCB">
+                <img class="half-window-image" src="../assets/img/virat_rcb.jpg" alt="Play bold">
             </div>
         </div>
         
