--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,16 +1,16 @@
-<footer class="footer">
+<footer class="footer dark-bg">
     <div class="container">
         <div class="row">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="https://www.creative-tim.com">Creative Tim</a></li>
-                    <li><a href="http://blog.creative-tim.com">Blog</a></li>
-                    <li><a href="https://www.creative-tim.com/license">Licenses</a></li>
+                    <li><a href="https://www.creative-tim.com" class="white-text">Crypto Ipl</a></li>
+                    <li><a href="http://blog.creative-tim.com" class="white-text">White Papperr</a></li>
+                    <li><a href="https://www.creative-tim.com/license" class="white-text">Documentation</a></li>
                 </ul>
             </nav>
             <div class="credits ml-auto">
-                <span class="copyright">
-                    © {{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by Creative Tim
+                <span class="copyright white-text">
+                    © {{test | date: 'yyyy'}}, made with <i class="fa fa-soccer-ball-o heart"></i> by Crypto IPL
                 </span>
             </div>
         </div>
