--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,11 +30,11 @@
     </div>
     <div class="main">
         <app-components></app-components>
-        <div class="section section-dark section-nucleo-icons">
+        <!-- <div class="section section-dark section-nucleo-icons">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
-                        <h2 class="title">Nucleo Icons</h2><br/>
+                        <h2 class="title">Footer contents</h2><br/>
                         <p class="description">
                             Now UI Kit comes with 100 custom icons made by our friends from NucleoApp. The official package contains over 2.100 thin icons which are looking great in combination with Now UI Kit Make sure you check all of them and use those that you like the most.
                         </p><br/>
@@ -63,8 +63,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="section section-dark">
+        </div> -->
+        <!-- <div class="section section-dark">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
@@ -73,8 +73,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="section section-image section-login" style="background-image: url('assets/img/login-image.jpg');">
+        </div> -->
+        <!-- <div class="section section-image section-login" style="background-image: url('assets/img/login-image.jpg');">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12 ml-auto mr-auto">
@@ -173,6 +173,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
