My teams changes

--- a/src/app/marketPlace/owner-modal.component.html
+++ b/src/app/marketPlace/owner-modal.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 <div class="modal-body">
-  Owner : {{address}}
+  Owner : {{address}} test
 </div>
 <div class="modal-footer">
   <div class="left-side">
