--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -10,7 +10,7 @@
             </nav>
             <div class="credits ml-auto">
                 <span class="copyright white-text">
-                    © {{test | date: 'yyyy'}}, made with <i class="fa fa-soccer-ball-o heart"></i> by Crypto IPL
+                    © {{test | date: 'yyyy'}}, made for love with <i class="fa fa-soccer-ball-o heart"></i> by Crypto IPL
                 </span>
             </div>
         </div>
