--- a/src/assets/sass/paper-kit/_examples.scss
+++ b/src/assets/sass/paper-kit/_examples.scss
@@ -40,6 +40,7 @@
     }
     &.page-header-xs{
         min-height: 40vh !important;
+        background-image: url("assets/img/ball.png");
     }
 
     &.section-dark{
