--- a/src/app/marketPlace/market-place.component.html
+++ b/src/app/marketPlace/market-place.component.html
@@ -2,10 +2,10 @@
   <div class="page-header page-header-xs" data-parallax="true">
     <div class="filter"></div>
   </div>
-  <div class="section text-center p-r-21">
-    <div class="row">
+  <div class="container-section text-center p-r-21">
+    <!-- <div class="row">
       <button type="button" class="btn btn-outline-success btn-round" (click)="payout()">Success</button>
-    </div>
+    </div> -->
     <div class="row">
       <div class="col-lg-3" *ngFor="let participant of participantArray;let i = index">
         <div class="card" style="width: 18rem;">
