--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -42,7 +42,7 @@
           </a>
         </li>
         <li class="nav-item" *ngIf="!isDocumentation()">
-          <a href="javascript:void(0)" class="nav-link" (click)="getTokensOfOwner()">
+          <a [routerLink]="['my-teams']" class="nav-link">
             <i class="nc-icon nc-book-bookmark"></i> My Teams</a>
         </li>
         <li class="nav-item" *ngIf="!isDocumentation()">
