--- a/src/app/my-teams/my-teams.component.html
+++ b/src/app/my-teams/my-teams.component.html
@@ -11,22 +11,10 @@
           </div>
           <div class="card-body">
             <div class="row">
-              <div class="col-md-6">
-                <h4>Current worth</h4>
+              <div class="col-md-12 text-center">
+                <h4>Your Net Worth</h4>
                 <div class="m-t-10">Total : $ {{currentTotalWorth}}</div>
                 <div *ngFor="let team of teams" class="m-t-10">{{team.name}} - {{team.price | number: '1.4-4'}} ethers - $ {{team.usdPrice}}</div>
-              </div>
-              <div class="col-md-6">
-                <h4>Future worth</h4>
-                <div>
-                  Repeater with team
-                </div>
-                <label for="">Total worth:
-                  <span>totalWorth</span>
-                </label>
-                <label for="">Total worth:
-                  <span>totalWorth</span>
-                </label>
               </div>
             </div>
           </div>
