--- a/src/app/my-teams/my-teams.component.html
+++ b/src/app/my-teams/my-teams.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="page-header page-header-xs" data-parallax="true">
+  <div class="page-header page-header-xs ball-bg" data-parallax="true">
     <div class="filter"></div>
   </div>
   <div class="container-section p-r-21">
