--- a/src/assets/sass/paper-kit/_examples.scss
+++ b/src/assets/sass/paper-kit/_examples.scss
@@ -41,6 +41,7 @@
     &.page-header-xs{
         min-height: 40vh !important;
         background-image: url("assets/img/ball.png");
+        opacity: 0.8;
     }
 
     &.section-dark{
