--- a/src/app/marketPlace/market-place.component.scss
+++ b/src/app/marketPlace/market-place.component.scss
@@ -1,3 +1,34 @@
 .container-section {
   padding: 70px 50px;
 }
+
+.coming-soon-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 30px;
+  left: 100px;
+  font-weight: 500;
+  z-index: 10;
+  font-size: 50px;
+  color: #008000;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);  
+}
+
+.coming-soon-bg-opacity {
+  opacity: 0.3;
+}
+
+.timer-container {
+  width: 100%;
+  position: absolute;
+  top: 76%;
+  font-size: 34px;
+  z-index: 18;
+  background: #51cbce;
+  bottom: 50px;
+}
