--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -14,6 +14,12 @@
     <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item" *ngIf="!isDocumentation()">
+          <a class="nav-link" [routerLink]="['signup']" rel="tooltip" title="Register email to get notifications" data-placement="bottom">
+            <i class="nc-icon nc-single-02"></i>
+            <p class="d-lg-none">Sign Up</p>
+          </a>
+        </li>
+        <li class="nav-item" *ngIf="!isDocumentation()">
           <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim"
             target="_blank">
             <i class="fa fa-twitter"></i>
