--- a/src/app/components/information/information.component.html
+++ b/src/app/components/information/information.component.html
@@ -1,59 +1,86 @@
 <div class="section section-buttons">
-    <div class="container">
-        <div class="tim-title">
-            <h2>Basic Information</h2>
-        </div>
-
-        <div class="row" style="margin-top:20px;margin-bottom: 20px;">
-            <div class="col-md-6">
-                <div class="tim-title">
-                    <h3>Loren Ipsum</h3>
-                    <br/>
-                </div>
-                <div>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                </div>
-            </div>
-            <div class="col-md-6">
-                <img class="half-window-image" src="../assets/img/virat_rcb.jpg" alt="Play bold">
-            </div>
-        </div>
-
-        <div class="row" style="margin-top:20px;margin-bottom: 20px;">
-            <div class="col-md-6">
-                <img class="half-window-image" src="../assets/img/virat_rcb.jpg" alt="Play bold">
-            </div>
-            <div class="col-md-6">
-                <div class="tim-title">
-                    <h3>Loren Ipsum</h3>
-                    <br/>
-                </div>
-                <div>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                </div>
-            </div>
-        </div>
-
-        <div class="row" style="margin-top:20px;margin-bottom: 20px;">
-            <div class="col-md-6">
-                <div class="tim-title">
-                    <h3>Loren Ipsum</h3>
-                    <br/>
-                </div>
-                <div>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                </div>
-            </div>
-            <div class="col-md-6">
-                <img class="half-window-image" src="../assets/img/virat_rcb.jpg" alt="Play bold">
-            </div>
-        </div>
-        
+  <div class="container">
+    <div class="tim-title">
+      <h3>
+        <b>Cricket Domination on Blockchain</b>
+      </h3>
     </div>
+
+    <div class="row" style="margin-top:20px;margin-bottom: 20px;">
+      <div class="col-md-6">
+        <div>
+          <p>
+            Buy IPL teams and players as Smart Contracts using blockchain technology and take over Cricket world.
+          </p>
+          <p>Be the owner of the cricket world and own IPL participants such as RCB, SRH or MI etc, As Smart Contracts on the
+            Ethereum Blockchain.
+          </p>
+          <p>CryptoIPL is an interactive game that lets anyone buy and own IPL participants as Smart Contracts on the Ethereum
+            Blockchain. As soon as you acquire a IPL participant, you take ownership of that team and it automatically
+            <span class="text-info">increases in price</span>.
+          </p>
+          <p>
+            <b>Careful though!</b> If someone else wants to claim your team, they can by paying up to double the price that
+            you paid. You will then lose the ownership of that team, but you will receive up to double the amount in ETH
+            automatically transferred back to your crypto wallet.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img class="half-window-image" src="../assets/img/virat_rcb.jpg" alt="Play bold">
+      </div>
+    </div>
+
+    <div class="row" style="margin-top:20px;margin-bottom: 20px;">
+      <div class="col-md-6">
+        <img class="half-window-image" src="../assets/img/player/srhlanding.jpg" alt="Play bold">
+      </div>
+      <div class="col-md-6">
+        <h3>
+          <b>Announcing Teams</b>
+        </h3>
+        <br>
+        <div>
+          <p>
+            IPL Players is an exciting upcoming addition to the world of CrypIPL. With the upcoming addition of IPL Players, team owners
+            will start to see real benefit of owning Teams.
+          </p>
+          <p>
+            Players will also allow new players and beginners to get into the world of blockchain gaming and CryptoIPL with a far lower
+            threshold, while at the same time get to experience the fast-paced and exciting gameplay of trading collectibles.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row" style="margin-top:20px;margin-bottom: 20px;">
+      <div class="col-md-6">
+        <div class="tim-title">
+          <h3>
+            <b>Most Player Friendly Value increase</b>
+          </h3>
+          <br/>
+        </div>
+        <div>
+          <p>
+            CryptoIPL has by far the most player friendly
+            <span class="text-info">value increase model</span> with the absolute lowest commissions. Compared to other collectible games that take
+            massive commisions on each purchase, CryptoIPL value the players and the game. If you don't believe it, check
+            it our for yourself by reading our Smart Contract and comparing it with others.
+          </p>
+          <p>
+            In CryptoIPL you can buy any available team on the tournament. Any other player can also purchase and claim your team as
+            long as they pay up to double the amount of what you paid to buy the team in the first place.
+          </p>
+          <p>
+            The new price including the profit is then transferred back to the previous owner of the team automatically.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img class="half-window-image" src="../assets/img/player/milanding.png" alt="Play bold">
+      </div>
+    </div>
+
+  </div>
 </div>
