--- a/src/app/marketPlace/market-place.component.html
+++ b/src/app/marketPlace/market-place.component.html
@@ -14,7 +14,8 @@
               <ng-container>
                 <i class="nc-icon nc-single-02"></i>
               </ng-container>
-              Congratulation you are new Owner of {{newOwner}} and new price is {{newPrice}}.
+              Congratulation you are new Owner of {{newOwner}} and new price is {{newPrice}}, track it
+              <a href="{{etherScan}}">here</a>.
               <button type="button" name="button" class="close" (click)="closeSuccessAlert()">
                 <i class="nc-icon nc-simple-remove"></i>
               </button>
