removed console erroer

--- a/src/app/components/information/information.component.html
+++ b/src/app/components/information/information.component.html
@@ -6,7 +6,7 @@
       </h3>
     </div>
 
-    <div class="row" style="margin-top:20px;margin-bottom: 20px;">
+    <div class="row" style="margin-top:20px;margin-bottom: 20px;" id="info">
       <div class="col-md-6">
         <div>
           <p>
@@ -82,5 +82,31 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-12">
+        <div class="tim-title text-center">
+          <h3>
+            <b>Metamask Required</b>
+          </h3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="tim-title text-center">
+          <div>
+            <p>
+              MetaMask is an Ethereum wallet that runs in your browser, where you have full control over the funds. It gives you the ability
+              to interact with websites using smart contracts, and to send and receive Ether. Once you have MetaMask installed,
+              you can start purchasing poop! Payments will be sent directly to your wallet for your market earnings.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-12 text-center">
+        <!-- <img class="half-window-image" src="../assets/img/player/milanding.png" alt="Play bold"> -->
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/6Gf_kRE4MJU" frameborder="0" allowfullscreen=""></iframe>
+      </div>
+    </div>
   </div>
 </div>
