--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,36 +1,47 @@
 <div class="wrapper">
-    <div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
-        <div class="filter"></div>
-        <div class="content-center">
-            <div class="container">
-                <div class="title-brand">
-                    <!-- <div class="angular-logo">
+  <div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
+    <div class="filter"></div>
+    <div class="content-center">
+      <div class="container">
+        <div class="title-brand">
+          <!-- <div class="angular-logo">
                         <img src="assets/img/angular2-logo.png" alt="">
                     </div> -->
-                    <h1 class="presentation-title">{{staticMock.title}}</h1>
-                    <div class="fog-low">
-                        <img src="assets/img/fog-low.png" alt="">
-                    </div>
-                    <div class="fog-low right">
-                        <img src="assets/img/fog-low.png" alt="">
-                    </div>
-                </div>
-
-                <h2 class="presentation-subtitle text-center">Buy <b><i>favourite team</i></b> and compete to make <b><i>Ether</i></b></h2>
-            </div>
+          <h1 class="presentation-title">{{staticMock.title}}</h1>
+          <div class="fog-low">
+            <img src="assets/img/fog-low.png" alt="">
+          </div>
+          <div class="fog-low right">
+            <img src="assets/img/fog-low.png" alt="">
+          </div>
         </div>
-        <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
-        <h6 class=" category-absolute ml-auto mr-auto">{{staticMock.presentors}}
-        <!-- <h6 class="category category-absolute">Designed and coded by -->
 
-            <!-- <a href="https://www.creative-tim.com" target="_blank">
+        <h2 class="presentation-subtitle text-center">Buy
+          <b>
+            <i>favourite team</i>
+          </b> and compete to make
+          <b>
+            <i>Ether</i>
+          </b>
+        </h2>
+      </div>
+    </div>
+    <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
+    <h6 class=" category-absolute ml-auto mr-auto">{{staticMock.presentors}}
+      <!-- <h6 class="category category-absolute">Designed and coded by -->
+      <div>
+        <a href="#info">
+          <i class="nc-icon nc-minimal-down"></i>
+        </a>
+      </div>
+      <!-- <a href="https://www.creative-tim.com" target="_blank">
                 <img src="assets/img/creative-tim-white-slim2.png" class="creative-tim-logo">
             </a> -->
-        </h6>
-    </div>
-    <div class="main">
-        <app-components></app-components>
-        <!-- <div class="section section-dark section-nucleo-icons">
+    </h6>
+  </div>
+  <div class="main">
+    <app-components></app-components>
+    <!-- <div class="section section-dark section-nucleo-icons">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
@@ -64,7 +75,7 @@
                 </div>
             </div>
         </div> -->
-        <!-- <div class="section section-dark">
+    <!-- <div class="section section-dark">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
@@ -74,7 +85,7 @@
                 </div>
             </div>
         </div> -->
-        <!-- <div class="section section-image section-login" style="background-image: url('assets/img/login-image.jpg');">
+    <!-- <div class="section section-image section-login" style="background-image: url('assets/img/login-image.jpg');">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12 ml-auto mr-auto">
@@ -174,5 +185,5 @@
                 </div>
             </div>
         </div> -->
-    </div>
+  </div>
 </div>
