--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,18 +1,22 @@
 <footer class="footer dark-bg">
-    <div class="container">
-        <div class="row">
-            <nav class="footer-nav">
-                <ul>
-                    <li><a href="https://www.creative-tim.com" class="white-text">Crypto Ipl</a></li>
-                    <li><a href="http://blog.creative-tim.com" class="white-text">White Papperr</a></li>
-                    <li><a href="https://www.creative-tim.com/license" class="white-text">Documentation</a></li>
-                </ul>
-            </nav>
-            <div class="credits ml-auto">
-                <span class="copyright white-text">
-                    © {{test | date: 'yyyy'}}, made for love with <i class="fa fa-soccer-ball-o heart"></i> by Crypto IPL
-                </span>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <nav class="footer-nav">
+        <ul>
+          <li>
+            <a href="https://github.com/paldheeraj25/cryptoIplSmartContract" class="white-text">Crypto Ipl</a>
+          </li>
+          <li>
+            <a href="https://github.com/paldheeraj25/cryptoIplSmartContract" class="white-text">Documentation</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="credits ml-auto">
+        <span class="copyright white-text">
+          © {{test | date: 'yyyy'}}, Developed
+          <i class="fa fa-soccer-ball-o heart"></i> by Crypto IPL Team
+        </span>
+      </div>
     </div>
+  </div>
 </footer>
