--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,15 +19,15 @@
             <p class="d-lg-none">Sign Up</p>
           </a>
         </li>
-        <li class="nav-item" *ngIf="!isDocumentation()">
+        <!-- <li class="nav-item" *ngIf="!isDocumentation()">
           <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim"
             target="_blank">
             <i class="fa fa-twitter"></i>
             <p class="d-lg-none">Twitter</p>
           </a>
-        </li>
+        </li> -->
         <li class="nav-item" *ngIf="!isDocumentation()">
-          <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/CreativeTim"
+          <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/Cryptoipl-996447570508993/"
             target="_blank">
             <i class="fa fa-facebook-square"></i>
             <p class="d-lg-none">Facebook</p>
@@ -41,7 +41,7 @@
           </a>
         </li> -->
         <li class="nav-item" *ngIf="!isDocumentation()">
-          <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="https://www.github.com/CreativeTimOfficial/pk2-angular"
+          <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="https://github.com/paldheeraj25/cryptoIplSmartContract"
             target="_blank">
             <i class="fa fa-github"></i>
             <p class="d-lg-none">GitHub</p>
