--- a/src/app/shared/modalPopup/modal-popup.component.html
+++ b/src/app/shared/modalPopup/modal-popup.component.html
@@ -1,17 +1,11 @@
 <div class="modal-header">
-  <h5 class="modal-title text-center">Your Teams</h5>
+  <h5 class="modal-title text-center">{{header}}</h5>
   <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <div class="modal-body">
-
-  <div class="d-flex justify-content-around" *ngFor="let i of myTeam">
-    <div class="p-2">
-      <h6>{{i.name}}</h6>
-    </div>
-    <div class="p-2">{{i.price}}</div>
-  </div>
+  {{description}}
 </div>
 <div class="modal-footer">
   <div class="left-side">
