--- a/src/app/marketPlace/market-place.component.html
+++ b/src/app/marketPlace/market-place.component.html
@@ -59,9 +59,9 @@
       </div>
       <div class="col-lg-3 col-md-3" *ngFor="let participant of comingsoonColl;let index = index">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top coming-soon-bg-opacity" src="assets/img/player/{{participant.name}}.jpg" alt="Card image cap">
+          <img class="card-img-top coming-soon-bg-opacity" src="assets/img/player/ABC.jpg" alt="Card image cap">
           <div class="card-body coming-soon-bg-opacity">
-            <p class="card-text">{{participant.name}}.</p>
+            <p class="card-text">RCB.</p>
             <h5>
               <b> {{participant.price | number: '1.4-4'}} ethers</b>
             </h5>
